kube/manifests/drone/server/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-server
  labels:
    app: drone-server
  annotations:
spec:
  selector:
    matchLabels:
      app: drone-server
  replicas: 2
  template:
    metadata:
      labels:
        app: drone-server
    spec:
      containers:
      - name: drone-server
        image: drone/drone:1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
