kube/manifests/drone/server/service.yml
apiVersion: v1
kind: Service
metadata:
  name: droneserver
  namespace: drone
  labels:
    app: drone-server
spec:
  type: ClusterIP
  selector:
    app: drone-server
  ports:
    - protocol: TCP
      port: 80
